src/objects/LM_CustomSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frequency_Text__c</fullName>
        <label>Frequency of run</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequncy_Of_Run__c</fullName>
        <label>Frequency of Credits</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_Annual_Leaves__c</fullName>
        <label>Total Number Of Leaves/Year</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_leaves_to_be_carry_forward__c</fullName>
        <label>No. of leaves to be carry forward</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Leave Related Custom Settings</label>
</CustomObject>